# malmo-homes-streamlit

./: .env.example  .gitignore  HEMNET_SCRAPER_README.md  README.md  malmo-setup-script.py  malmo_housing_price_model.py  price_prediction.py  pyproject.toml
.github/: copilot-instructions.md
.github/checklists/: 2025-11-15-PROJECT-STATUS.md  2025-11-15-architecture-diagrams.md  2025-11-15-area-filtering-implementation.md  2025-11-15-backfill-safety-features.md  2025-11-15-bulk-link-collection-checklist.md  2025-11-15-date-filtering-issue.md  2025-11-15-hemnet-scraper-checklist.md  2025-11-15-historical-backfill-strategy.md  2025-11-15-implementation-complete.md  2025-11-15-living-area-filtering-strategy.md  2025-11-15-project-components-overview.md  2025-11-15-property-scraper-implementation.md  2025-11-15-property-scraper-summary.md  2025-11-15-repository-cleanup.md  2025-11-15-sold-properties-scraper-plan.md  2025-11-15-test-results-analysis.md  2025-11-15-unified-scraper-architecture.md  2025-11-16-computer-vision-pipeline-checklist.md  2025-11-16-cv-pipeline-summary.md  2025-11-22-property-detail-runner-checklist.md
.github/workflows/: deploy_app.yml  generate_reports.yml  property_detail_runner.yml  scrape_sold_batch.yml  scrape_sold_monthly.yml  scrape_weekly.yml  tests.yml
app/: streamlit_app.py
config/: app_config.yaml  database_config.yaml  scraper_config.yaml
data/: .hemnet_session.json  test_urls.csv
data/processed/property_details/gha_runs/: index.jsonl
data/processed/property_details/gha_runs/20251122T220451Z/: batch_0000.parquet  batch_0001.parquet  batch_0002.parquet  batch_0003.parquet  batch_0004.parquet  batch_0005.parquet  batch_0006.parquet  batch_0007.parquet  batch_0008.parquet  batch_0009.parquet  metadata.json  progress_cache.json
data/processed/test_batch/: batch_0000.parquet  metadata.json
data/raw/: hemnet_links_20251115_201403.csv  sold_properties_202001.csv  sold_properties_202511.csv  sold_properties_all_areas.csv  sold_properties_area_150_200.csv
data/raw/area_ranges/: progress.json  properties_0_31.csv  properties_150_155.csv  properties_155_160.csv  properties_31_37.csv  properties_37_40.csv  properties_40_43.csv  properties_43_46.csv  properties_46_49.csv  properties_49_51.csv  properties_51_52.csv  properties_52_53.csv  properties_53_54.csv  properties_54_55.csv  properties_55_56.csv
data/test_results/: district_analysis.json  test_results_20251115_215033.json  test_stats_20251115_215033.json
docs/: LIVING_AREA_FILTERING.md  Predicting Property Prices with Images-short-info.md  Predicting Property Prices with Images.md  Swedish Real Estate Market Analysis Tool.md
scripts/: analyze_district_structure.py  backfill_sold_links.py  inspect_apollo_state.py  integration_test.py  scrape_all_areas.py  test_scraper_sample.py  trigger_backfill_parallel.sh
src/models/: __init__.py  property_schema.py
src/scrapers/: batch_manager.py  batch_manager_cli.py  link_collector.py  progress_tracker.py  property_detail_scraper.py  property_scraper.py  sold_properties_scraper.py
tests/: test_property_schema.py  test_property_scraper.py
