[project]
name = "malmo-homes-streamlit"
version = "0.1.0"
description = "Automated housing market analysis for Malmö, Sweden"
authors = [
    {name = "Jonathan Jayes", email = "jonathan.jayes@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "playwright>=1.47.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Core scraping dependencies
scraping = [
    "playwright>=1.47.0",
]

# Database and data processing
data = [
    "duckdb>=1.1.0",
    "polars>=1.10.0",
]

# API and web app
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

# Streamlit app
streamlit = [
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "altair>=5.4.0",
]

# Report generation
reports = [
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

# Development tools
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
    "ipykernel>=6.29.0",
]

# All dependencies for local development
all = [
    "malmo-homes-streamlit[scraping,data,api,streamlit,reports,dev]",
]

[project.urls]
Homepage = "https://github.com/j-jayes/malmo-homes-streamlit"
Repository = "https://github.com/j-jayes/malmo-homes-streamlit"
Issues = "https://github.com/j-jayes/malmo-homes-streamlit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
